<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_contact">Add a New Contact</string>
    <string name="title_activity_edit_groups">Edit Groups</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="group">Group</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="home_phone">Home Phone</string>
    <string name="work_phone">Work Phone</string>
    <string name="email">Email</string>
    <string name="homeAdd">Home Address</string>
    <string name="doa">Date of Birth</string>
    <string name="new_str">New</string>
    <string name="new_group">Create a New Group</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="edit_groups">Edit Groups</string>
    <string name="title_activity_all_groups">Contacts Manager</string>
    <string name="title_activity_view_group">ViewGroupActivity</string>

</resources>
