<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllGroupsActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#33B5E5" >

        <Button
            android:id="@+id/all_groups_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/group" />

        <Button
            android:id="@+id/all_groups_button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/all" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/all_groups_listview"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#33B5E5" >

        <Button
            android:id="@+id/all_groups_button_search"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

        <Button
            android:id="@+id/all_groups_button_edit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_groups"
            android:textSize="15.5sp" />

        <Button
            android:id="@+id/all_groups_button_add"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>
