<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewContactActivity" >

    <ImageView
        android:id="@+id/view_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/view_image" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/phone"
                android:textColor="#33B5E5" />

            <View
                android:id="@+id/view_sep_line1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/view_phone_label"
                android:background="#33B5E5" />

            <TextView
                android:id="@+id/view_phone_mobile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_sep_line1"
                android:text="@string/mobile"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_phone_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_phone_mobile_label"
                android:text="@string/mobile_phone" />

            <TextView
                android:id="@+id/view_phone_home_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_phone_mobile"
                android:text="@string/home"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_phone_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_phone_home_label"
                android:text="@string/home_phone" />

            <TextView
                android:id="@+id/view_phone_work_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_phone_home"
                android:text="@string/work"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_phone_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_phone_work_label"
                android:text="@string/work_phone" />

            <TextView
                android:id="@+id/view_other_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/view_phone_work"
                android:text="@string/other"
                android:textColor="#33B5E5" />

            <View
                android:id="@+id/view_sep_line2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/view_other_label"
                android:background="#33B5E5" />
            
            <TextView
                android:id="@+id/view_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_sep_line2"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_email_label"
                android:text="@string/email" />
            
            <TextView
                android:id="@+id/view_homeAdd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_email"
                android:text="@string/homeAdd"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_homeAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_homeAdd_label"
                android:text="@string/homeAdd" />
            
            <TextView
                android:id="@+id/view_doa_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_homeAdd"
                android:text="@string/doa"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_doa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_doa_label"
                android:text="@string/doa" />
            
            <TextView
                android:id="@+id/view_group_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_doa"
                android:text="@string/group"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/view_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_group_label"
                android:text="@string/group" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>