<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/group" />

        <Button
            android:id="@+id/main_button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/all" />
    </LinearLayout>

    <ListView
        android:id="@+id/main_listview"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/main_button_search"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#33B5E5"
            android:scaleType="centerInside"
            android:src="@drawable/search_icon" />

        <ImageButton
            android:id="@+id/main_button_sort"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#33B5E5"
            android:scaleType="centerInside"
            android:src="@drawable/sort_icon" />

        <ImageButton
            android:id="@+id/main_button_add"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#33B5E5"
            android:scaleType="centerInside"
            android:src="@drawable/add_contact" />
    </LinearLayout>

</LinearLayout>